--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                19/06 
+                03/07 
               </a>
             </h3>
             <p>
@@ -64,7 +64,7 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> COSTELA ASSADA DE FORNO </li> -->
-              <!-- <li> COSTELA AO MOLHO </li> -->
+              <li> COSTELA AO MOLHO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -79,13 +79,13 @@
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO XADREZ </li>
+              <!-- <li> FRANGO XADREZ </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
-              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
@@ -97,7 +97,7 @@
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
-              <li> VACA ATOLADA </li>
+              <!-- <li> VACA ATOLADA </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <li> SUCO </li>
             </ul>
@@ -115,8 +115,9 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MUNGUNZA </li> -->
-              <li> MINGAU DE BANANA </li>
+              <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM QUEIJO </li>
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> PIT STOP </li> -->
@@ -135,7 +136,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- TERÇA -->
-                20/06
+                04/07
               </a>
             </h3>
             <p>
@@ -146,10 +147,10 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> BATATA DOCE </li>
+              <!-- <li> BATATA DOCE </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> OVO COZIDO </li> -->
+              <li> OVO COZIDO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -176,7 +177,8 @@
               <!-- <li> COZIDÃO MANAUARA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <li> ESCONDIDINHO DE CARNE </li>
+              <!-- <li> ESCONDIDINHO DE CARNE </li> -->
+              <li> ESTROGONOFE DE CARNE </li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -185,8 +187,8 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO COM BATATAS</li>
+              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -221,11 +223,12 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
+              <li> PIT STOP </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
@@ -241,7 +244,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                21/06
+                05/07
 
               </a>
             </h3>
@@ -253,11 +256,12 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> BOLINHO DE CHUVA </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>;
+              <!-- <li> OVO COZIDO </li>; -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PATÊ DE SARDINHA </li> -->
@@ -280,14 +284,14 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <!-- <li> CARNE GUISADA </li> -->
+              <li> CARNE GUISADA </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FILE DE FRANGO FRITO </li>
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -311,8 +315,8 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PANQUECA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <li> PIRARUCU A MILANESA </li>
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> SUÍNO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -335,10 +339,11 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
+              <li> QUARENTÃO </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
@@ -358,7 +363,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                22/06
+                06/07
 
               </a>
             </h3>
@@ -373,7 +378,8 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FRUTAS </li>
+              <!-- <li> FRUTAS </li> -->
+              <li> MINGAU </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -410,7 +416,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
@@ -424,13 +430,13 @@
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> OMELETE DE FORNO </li>
+              <!-- <li> OMELETE DE FORNO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
+              <li> PEIXE FRITO </li>
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> YAKISOBA DE CARNE </li> -->
 
@@ -448,7 +454,7 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -462,6 +468,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO</li> -->
               <!-- <li> TAPIOCA </li> -->
+              <li> TAPIOCA COM CAFÉ</li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
@@ -476,7 +483,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                23/06
+                07/07
 
               </a>
             </h3>
@@ -489,14 +496,14 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
-              <li> FAROFA DE CHARQUE </li>
+              <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -511,8 +518,8 @@
               <!-- <li> ASSADO DE PANELA </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
-              <!-- <li> CARNE ASSADA </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE ASSADA </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
               <!-- <li> COSTELA ASSADA </li> -->
@@ -521,7 +528,7 @@
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li> -->
+              <li> FEIJOADA </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -537,7 +544,7 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <li> MACARRONADA DE CAMARÃO </li>
+              <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -565,9 +572,9 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <li> PIZZA </li>
+              <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -582,7 +589,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                24/06
+                08/07
 
               </a>
             </h3>
@@ -661,7 +668,7 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -673,7 +680,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> VITAMINADA </li> -->
-              <li> TAPIOCA </li>
+              <!-- <li> TAPIOCA </li> -->
             </ul>
             </p>
           </div>
@@ -687,7 +694,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                25/06
+                09/07
 
               </a>
             </h3>
@@ -724,10 +731,11 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM BATATAS </li> -->
               <!-- <li> CARNE GUISADA </li> -->
-              <li> CARNE GUISADA COM LEGUMES </li>
+              <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <li> ESCONDIDINHO DE CARNE </li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -738,11 +746,11 @@
               <!-- <li> FRANGO ASSADO DE FORNO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -770,8 +778,8 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FAROFA DE OVO </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
-              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <li> PÃO COM OVO E QUEIJO </li>
               <!-- <li> PÃO COM QUEIJO E PRESUNTO</li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
