--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                17/07 
+                21/08 
               </a>
             </h3>
             <p>
@@ -82,14 +82,14 @@
               <!-- <li> FRANGO XADREZ </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CALABRESA </li>
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -114,13 +114,13 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> MINGAU DE MUNGUNZA </li> -->
+              <li> MINGAU DE MUNGUNZA </li>
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> PIT STOP </li>
+              <!-- <li> PIT STOP </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
@@ -136,7 +136,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- TERÇA -->
-                18/07
+                22/08
               </a>
             </h3>
             <p>
@@ -146,7 +146,8 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
+              <li> BOLINHO DE CHUVA </li>
               <!-- <li> BATATA DOCE </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
@@ -170,7 +171,7 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
-              <!-- <li> BISTECA SUINÁ </li>  -->
+              <li> BISTECA SUINÁ </li> 
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
@@ -184,12 +185,12 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -200,7 +201,7 @@
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
-              <li> PANQUECAS DE CARNE </li>
+              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PIRARUCU FRITO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
@@ -224,13 +225,13 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> PIT STOP </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -245,7 +246,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                19/07
+                23/08
 
               </a>
             </h3>
@@ -256,11 +257,12 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
+              <li> MINGAU DE AVEIA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li>; -->
               <!-- <li> OVO FRITO </li> -->
@@ -280,8 +282,8 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> ALMONDEGAS </li>
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> ALMONDEGAS </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
@@ -298,7 +300,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO A DORE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
@@ -314,7 +316,7 @@
               <!-- <li> MIX (OVO, CALABRESA E SALSICHA) </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PANQUECA </li> -->
+              <li> PANQUECAS DE FRANGO </li>
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A MILANESA </li> -->
@@ -331,6 +333,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <li> AÇAÍ </li>
               <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> ABACATADA COM BOLACHA </li> -->
@@ -348,7 +351,7 @@
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li> SALADA FRUTA </li> -->
@@ -364,7 +367,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                20/07
+                24/08
               </a>
             </h3>
             <p>
@@ -402,7 +405,7 @@
               <!-- <li> ALMONDEGAS AO MOLHO </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
@@ -436,7 +439,7 @@
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> YAKISOBA DE CARNE </li> -->
 
@@ -454,13 +457,13 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
-              <li> MINGAU </li>
+              <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE</li> -->
               <!-- <li> PASTEL </li> -->
@@ -483,7 +486,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                21/07
+                25/08
 
               </a>
             </h3>
@@ -501,9 +504,10 @@
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
+              <li> PANQUECA AMERICANA </li>
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -519,16 +523,16 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE ASSADA </li>
+              <!-- <li> CARNE ASSADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
-              <!-- <li> COSTELA ASSADA </li> -->
+              <li> COSTELA ASSADA </li>
               <!-- <li> CHURRASCO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li>ç -->
+              <li> FEIJOADA </li>ç
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -547,7 +551,7 @@
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> SALPICÃO de FRANGO </li>
+              <!-- <li> SALPICÃO de FRANGO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -575,8 +579,9 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
+              <li> X AMERICANO </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -590,7 +595,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                22/07
+                26/08
 
               </a>
             </h3>
@@ -695,7 +700,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                23/07
+                27/08
 
               </a>
             </h3>
